Small UI fixes in Issue dialogs. Fixed broken layout inside Issue details dialog. Fixed empty tooltip in the issue list (#5060)

--- a/modules/admin/admin-ui/src/main/resources/web/admin/common/styles/apps/content/publish/issue-list-dialog.less
+++ b/modules/admin/admin-ui/src/main/resources/web/admin/common/styles/apps/content/publish/issue-list-dialog.less
@@ -32,7 +32,7 @@
       }
 
       .my-issues-filter {
-        margin-left: 52px;
+        margin-left: 15px;
         margin-right: 15px;
       }
     }
@@ -77,6 +77,7 @@
           .@{_COMMON_PREFIX}main-name {
             height: 17px;
             font-weight: bold;
+            text-transform: capitalize;
           }
         }
 
@@ -88,7 +89,7 @@
             top: 3px;
 
             &:last-child {
-              margin-right: 13px;
+              margin-right: 18px;
             }
           }
         }
@@ -96,6 +97,8 @@
         .all-assignees-tooltip {
           font-size: 16px;
           align-self: flex-end;
+          padding-bottom: 5px;
+          margin-left: 5px;
         }
       }
     }
